--- a/docroot/css/custom.css
+++ b/docroot/css/custom.css
@@ -295,6 +295,11 @@ hr, .separator {
 	text-align: right;
 }
 
+.powered-by li {
+	display:inline-block;
+	padding-left:35px;
+}
+
 /* ---------- Site breadcrumbs ---------- */
 
 .site-breadcrumbs {
