--- a/docroot/css/.sass-cache/main.css
+++ b/docroot/css/.sass-cache/main.css
@@ -2562,8 +2562,8 @@ body.orange, .orange .portlet {
 
 /* ---------- Base styles ---------- */
 body {
-  background: #5DBCD2;
-  font-size: 14px; }
+  background: #EEF0F2;
+  font-size: 11px; }
 
 a {
   color: #5B677D;
@@ -2737,7 +2737,7 @@ hr, .separator {
 
 /* ---------- Portlet wrapper and icons ---------- */
 .portlet {
-  background-color: #FFFFFF;
+  background-color: #EEF0F2;
   border: 1px solid #C8C9CA;
   margin: 0 0 10px;
   padding: 3px;
@@ -2790,10 +2790,6 @@ hr, .separator {
 /* ---------- Footer ---------- */
 #footer {
   text-align: right; }
-
-.powered-by li {
-  display: inline-block;
-  padding-left: 35px; }
 
 /* ---------- Site breadcrumbs ---------- */
 .site-breadcrumbs {
@@ -2914,27 +2910,4 @@ hr, .separator {
   -webkit-border-bottom-left-radius: 0;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0; }
-
-.ui-button-text {
-  font-size: 10pt;
-  size: 8pt;
-  border: 0!important;
-  border-size: 0!important;
-  font-family: helvetica!important; }
-
-.fileupload-content:after {
-  position: relative;
-  font-weight: bold;
-  left: 11px;
-  font-size: 12pt;
-  color: #CCCCCC;
-  font-family: Calibri;
-  content: "Note: This browser window also allows for you to Drag and Drop files from your computer desktop to this interface for easy uploading.";
-  height: 400px !important;
-  width: 100% !important; }
-
-.fileupload-content {
-  height: 400px !important;
-  border: 0 !important;
-  border-size: 0 !important; }
 
